<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sawtooth_description</name>
  <version>0.0.0</version>
  <description>The package contains urdfs, launch files and meshes</description>
  <maintainer email="dhvarilgajjar19@gmail.com">dhrl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
